# Acheron

./: .clangd  .gitignore  LICENSE.md  README.md  acheron.wrap  meson.build  shell.nix
docs/: Doxyfile  Examples.md  Welcome.md  header.html
examples/: meson.build
examples/ecs/: components.cpp  events.cpp  fps_counter.cpp  functions_as_systems.cpp  health.cpp  module.cpp  singleton.cpp  stages.cpp
examples/renderer/: benchmark.cpp  rainbow.cpp  texture.cpp
examples/window/: window_config.cpp
src/: acheron.hpp  types.hpp
src/agl/: agl.hpp  const.hpp  func.hpp
src/ecs/: component.cpp  component.hpp  component_array.hpp  entity.cpp  entity.hpp  event.hpp  module.hpp  singleton.hpp  system.cpp  system.hpp  system_function.hpp  types.hpp  world.cpp  world.hpp
src/modules/renderer/: material.hpp  mesh.hpp  quad.cpp  quad.hpp  renderer.cpp  renderer.hpp  shader.hpp  texture.cpp  texture.hpp
src/modules/renderer/renderers/: mesh2d.cpp  mesh2d.hpp
src/modules/renderer/shaders/: basic.hpp  instanced.hpp
src/modules/window/: window.cpp  window.hpp
src/types/: basic.hpp  matrix4.hpp
subprojects/glfw-3.4/: meson.build
